Tests/RunCMake/CMakePresets/VariableNotObject-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/VariableNotObject:
Error: @9,16: Invalid CMake variable "VAR" for preset "VariableNotObject"
        "VAR": \[\]
               \^$
